# Ultra-Claude

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  take_screenshots.py
deploy/: autowrkers.service
docs/: CLAWDBOT_FEATURE_ANALYSIS.md  DEPLOYMENT_SECURITY.md  SECURITY_TODO.md
src/: __init__.py  agentic_runner.py  audit.py  auth.py  automation.py  cli.py  crypto.py  daemon.py  database.py  git_credentials.py  github_client.py  llm_provider.py  logging_config.py  models.py  notifications.py  notifier.py  scheduler.py  security.py  server.py  session_manager.py  updater.py  webhooks.py
src/browser/: __init__.py  api.py  manager.py  models.py  verification.py
src/telegram/: __init__.py  bot.py  commands.py  models.py
src/workflow/: api.py  artifact_manager.py  cli.py  models.py  phase_runner.py  sdk_bridge.py  sdk_models.py  todo_sync.py
src/workflow/oauth/: manager.py  storage.py
src/workflow/oauth/flows/: __init__.py  antigravity.py
src/workflow/providers/: __init__.py  antigravity.py  claude_code.py  gemini.py  openai.py  registry.py  sdk_provider.py
tests/: test_sdk_integration.py
web/static/css/: browser.css  issues.css  projects.css  settings.css  style.css  workflow.css
web/static/js/: app.js  browser.js  projects.js  settings.js  workflow.js
web/templates/: browser.html  index.html  issues.html  projects.html  settings.html  workflows.html
