[project]
name = "autowrkers"
version = "0.4.0"
description = "Multi-session Claude Code manager with GitHub Issues integration and Multi-LLM Workflow Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.3.0"]
openai = ["openai>=1.10.0"]
all = [
    "google-generativeai>=0.3.0",
    "openai>=1.10.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
autowrkers = "src.cli:main"
uc-workflow = "src.workflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
